# mocap_px4_bridge

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
docs/: px4-mocap-ros2.xml
docs/PX4+Mocap+ROS2-Guide/: Indoor Localization using OptiTrack and PX4_ AeroSTREAM Workshop Guide.md
docs/PX4+Mocap+ROS2-Guide/attachments/: client.cpp
launch/: run.launch.py
python_example/: rotating_quat.py
src/: mocap_px4_bridge.cpp
